--- a/src/pages/TemplatesPage.module.css
+++ b/src/pages/TemplatesPage.module.css
@@ -57,6 +57,8 @@
     }
 
     .grid {
-        gap: 32px;
+        flex-direction: column;
+        align-items: center;
+        gap: 48px;
     }
 }
